# Citizen-Feedback-Ai-Agent

./: ADVANCED_ANALYTICS.md  ANALYTICS_UPDATE.md  FEATURE_MAP.md  IMPLEMENTATION_SUMMARY.md  N8N_FIX_GUIDE.md  N8N_VISUAL_GUIDE.md  QUICK_START_ANALYTICS.md  README.md  STAFF_MANAGEMENT_GUIDE.md  TESTING_GUIDE.md  WORKFLOW_GUIDE.md  admin_portal.py  assign_feedback.py  check_database.py  citizen_portal.py  main.py  migrate_database.py  pyproject.toml  setup_analytics.py  setup_feedback.py  setup_staff.py  test_ai_features.py  test_n8n_webhook.py
data/: ai_config.json  db_config.json  feedback.json  n8n_config.json
src/: __init__.py  advanced_analytics.py  dashboard.py  data_manager.py  database.py  db_models.py  feedback_analyzer.py  geospatial_viz.py  n8n_client.py
src/ai/: __init__.py  advanced_nlp.py  ml_predictor.py  openai_integration.py  recommendation_engine.py  text_embeddings.py
