[project]
name = "citizen-feedback-ai-agent"
version = "1.0.0"
description = "AI-powered citizen feedback collection, analysis, and management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "streamlit-option-menu>=0.3.6",
]

[project.scripts]
citizen-feedback = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
